# xkcd-2529

./: LICENSE  Makefile  README.md  best_line_test.cpp  line.hpp  main.cpp  rational_test.cpp  walker.cpp  walker.hpp  walker_test.cpp
c/: Makefile  best_line.c  best_line.h  main.c  point.c  point.h  point_test.c  point_vector.c  point_vector.h  point_vector_test.c  walker.c  walker.h
cpp/: Makefile  best_line.cpp  best_line.hpp  best_line_test.cpp  line.cpp  line.hpp  line_test.cpp  main.cpp  point.cpp  point.hpp  pp_line.cpp  pp_line.hpp  pp_line_test.cpp  rational.cpp  rational.hpp  si_line.cpp  si_line.hpp  si_line_test.cpp  walker.cpp  walker.hpp  walker_test.cpp
dart/: pubspec.yaml
dart/lib/: bestline.dart  line.dart  main.dart  point.dart  walker.dart
dart/test/: bestline_test.dart  line_test.dart  main_test.dart  point_test.dart  walker_test.dart
go/: bestline.go  bestline_test.go  go.mod  line.go  line_test.go  main.go  main_test.go  walker.go  walker_test.go
java/: BestLine.java  Line.java  Main.java  Makefile  Pair.java  Point.java  Walker.java
javascript/: bestline.mjs  index.mjs  line.mjs  package.json  point.mjs  util.mjs  walker.mjs  worker.mjs
javascript/spec/: bestlineSpec.mjs  indexSpec.mjs  lineSpec.mjs  pointSpec.mjs  walkerSpec.mjs
kotlin/: BestLine.kt  Line.kt  Main.kt  Makefile  Point.kt  Walker.kt
python/: Makefile  bestline.py  line.py  main.py  walker.py
rust/: Cargo.toml
rust/src/: bestline.rs  line.rs  main.rs  rational.rs  walker.rs
