[package]
name = "rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
log = "0.4"
num = "0.4"
num-rational = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
debug = 1
